--- a/index.html
+++ b/index.html
@@ -9,70 +9,25 @@
     <meta name="description" content="Сайт факультету РЕКС КНУ ім Тараса Шевченка">
   </head>
   <body>
-    <div class="header-wrapper">
-      <header>
-        <a href="/">
-          <div class="logo">
-            <img src="logo.png" alt="">
-            Мій перший веб сайт
-          </div>
-        </a>
-        <div class="header-content">
-          <form>
-            <img src="search-icon.png" alt="">
-            <input type="text" placeholder="пошук" class="search-input"/>
-          </form>
-        </div>
-      </header>
-      <nav>
-        <ul>
-          <li>
-            <a href="http://rex.knu.ua/for-students/class-times/">
-              Розклад уроків
-            </a>
-          </li>
-          <li>
-            <a href="http://rex.knu.ua/staff/">
-              Викладачі
-            </a>
-          </li>
-          <li>
-            <a href="/">
-              Наукові роботи
-            </a>
-          </li>
-          <li>
-            <a href="/">
-              Новини факультету
-            </a>
-          </li>
-          <li>
-            <a href="/">
-              Література
-            </a>
-          </li>
-          <li>
-            <a href="/">
-              Для абітурієнтів
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <header class="header">
+      <div class="element1">
+        АААААААААААААААААААААААААААААА
+        АААААААААААААААААААААААААААААА
+      </div>
+      <div class="element2">
+        ПОЛЕ ДЛЯ ПОШУКУ ПОЛЕ ДЛЯ ПОШУКУ ПОЛЕ ДЛЯ ПОШУКУ
+        ПОЛЕ ДЛЯ ПОШУКУ ПОЛЕ ДЛЯ ПОШУКУ ПОЛЕ ДЛЯ ПОШУКУ
+      </div>
+    </header>
+    <div class="element3">
+      НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ
+      НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ
+      НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ
+      НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ  НАВІГАЦІЯ
     </div>
     <div class="app-wrapper">
       <aside class="unused">
-        <div>
-          <h3>Розклад КІ-2 2016</h3>
-          <ol class="timing">
-            <li>Веб програмування</li>
-            <li>Основи екології</li>
-            <li>Системне програмування</li>
-            <li>Сучасні СКБД</li>
-          </ol>
-        </div>
-        <div class="poem">
-          <h3>Поема дня</h3>
-          <p>
+        <div class="element4">
           Стояла я і слухала весну,
           Весна мені багато говорила,
           Співала пісню дзвінку, голосну
@@ -81,341 +36,55 @@
           Про молодощі, радощі, надії,
           Вона мені переспівала знов Те,
           що давно мені співали мрії.
-          </p>
-          <span>Леся Українка</span>
+        </div>
+        <div class="element5">
+          Стояла я і слухала весну,
+          Весна мені багато говорила,
+          Співала пісню дзвінку, голосну
+          То знов таємно-тихо шепотіла.
+          Вона мені співала про любов,
+          Про молодощі, радощі, надії,
+          Вона мені переспівала знов Те,
+          що давно мені співали мрії.
         </div>
       </aside>
       <main>
-        <div class="title">
-          <h1 class="title--primary">ФРЕКС</h1>
-          <h2 class="title--secondary">факультет радіофізики, електроніки та компютерних систем</h2>
+        <div class="element6">
+          Стояла я і слухала весну,
+          Весна мені багато говорила,
+          Співала пісню дзвінку, голосну
+          То знов таємно-тихо шепотіла.
+          Вона мені співала про любов,
+          Про молодощі, радощі, надії,
+          Вона мені переспівала знов Те,
+          що давно мені співали мрії.
         </div>
-
-        <p>
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-
-          Что ж ты, фраер, сдал назад
-          Не по масти я тебе
-          Ты смотри в мои глаза,
-          Брось трепаться о судьбе.
-
-          Ведь с тобой, мой мусорок
-          Я попутала рамсы
-          Завязала узелок
-          Как тугие две косы
-
-          Помню как ты подошел,
-          Как поскрипывал паркет,
-          Как поставил на мой стол
-          Чайных роз большой букет.
-
-          Я решила ты - скокарь
-          Или вор-авторитет.
-          Оказалось, просто тварь
-          Брал на понт, тушите свет.
-
-          Ты весь вечер флиртовал
-          И разжег в груди пожар
-          А когда поцеловал -
-          Миша смазал в лузу шар
-
-          Как узнали, что ты мент
-          Кипишнулся в баре стог,
-          Все растаяли в момент,
-          Тут облава и гоп-стоп
-
-          Сели в бест на долгий срок,
-          Хоть, спасибо, не метут,
-          Но меня, мой мусорок,
-          Все ментовкою зовут!
-
-          Ты со мною говорил,
-          Не разбрасывая слов,
-          Целовал и много пил
-          За меня и за любовь
-
-          Ты ж с иголочки ходил -
-          Лярвы пялили глаза,
-          А вчера как дверь открыл -
-          Я попятилась назад.
-          На тебе, мышиный туз,
-          Был майорский макинтош
-          И с кокардою картуз -
-          На себя ты не похож!
-
-          А когда узнал, кто я,
-          То разлил на стол вино,
-          И сказав: "Приду на днях",
-          Не вернулся все равно!
-        </p>
+        <div class="element7">
+          Стояла я і слухала весну,
+          Весна мені багато говорила,
+          Співала пісню дзвінку, голосну
+          То знов таємно-тихо шепотіла.
+          Вона мені співала про любов,
+          Про молодощі, радощі, надії,
+          Вона мені переспівала знов Те,
+          що давно мені співали мрії.
+          Стояла я і слухала весну,
+          Весна мені багато говорила,
+          Співала пісню дзвінку, голосну
+          То знов таємно-тихо шепотіла.
+          Вона мені співала про любов,
+          Про молодощі, радощі, надії,
+          Вона мені переспівала знов Те,
+          що давно мені співали мрії.
+          Стояла я і слухала весну,
+          Весна мені багато говорила,
+          Співала пісню дзвінку, голосну
+          То знов таємно-тихо шепотіла.
+          Вона мені співала про любов,
+          Про молодощі, радощі, надії,
+          Вона мені переспівала знов Те,
+          що давно мені співали мрії.
+        </div>
       </main>
     </div>
   </body>
